force-app/main/default/objects/Action__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <defaultValue>Today()+ 3</defaultValue>
    <description>Due Date of the Action to be made.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>