force-app/main/default/objects/Action__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <color>#FFCC66</color>
                <default>true</default>
                <label>🔄 Open</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#B6E32E</color>
                <label>✅ Closed</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <color>#999999</color>
                <label>❎ Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>