force-app/main/default/objects/Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>DueDate__c</columns>
    <columns>AssignedTo__c</columns>
    <columns>WorkItem__c</columns>
    <columns>Project_Review__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>