force-app/main/default/objects/Action__c/listViews/OpenActions.listView-meta.xml
<ListView>
    <fullName>OpenActions</fullName>
    <columns>Id__c</columns>
    <columns>NAME</columns>
    <columns>AssignedTo__c</columns>
    <columns>DueDateFormula__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Actions</label>
</ListView>